[gd_scene load_steps=32 format=3 uid="uid://sra4pqjmj11a"]

[ext_resource type="Script" uid="uid://bxs3eblygn8oo" path="res://scenes/inventory/inventory_view/inventory_view.gd" id="1_43eln"]
[ext_resource type="PackedScene" uid="uid://dnkls2h5eaj10" path="res://scenes/inventory/inventory_view/tab_switcher/tab_button.tscn" id="3_eyvfv"]
[ext_resource type="Texture2D" uid="uid://becqlf1lmdb1x" path="res://assets/Food_01.png" id="4_0y30f"]
[ext_resource type="Script" uid="uid://bevd783gr5t7m" path="res://scenes/inventory/inventory_view/tab_switcher/tab_switcher.gd" id="4_tabsw"]
[ext_resource type="Texture2D" uid="uid://3ceshn32wqax" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/tab_banner.png" id="8_midoe"]
[ext_resource type="Script" uid="uid://o2cqmwaxwv01" path="res://scenes/inventory/inventory_view/equipment_tab/equipment_tab.gd" id="8_qfdbg"]
[ext_resource type="Texture2D" uid="uid://ba14l6y1itu7w" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/equipment_category.png" id="9_qedsu"]
[ext_resource type="Texture2D" uid="uid://vggpdp1g004h" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/selection_arrow.png" id="10_fs5oo"]
[ext_resource type="Texture2D" uid="uid://droy2byen4eel" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/selected_option.png" id="11_xrgga"]
[ext_resource type="Texture2D" uid="uid://c7e4uc5k4i3hx" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/unselected_option.png" id="12_qfdbg"]
[ext_resource type="PackedScene" uid="uid://u2naqgqaai45" path="res://scenes/inventory/inventory_view/equipment_tab/equipment_grid/equipment_grid.tscn" id="13_qedsu"]
[ext_resource type="PackedScene" uid="uid://bywdjh8pmjuev" path="res://scenes/inventory/inventory_view/equipment_tab/gear_selector/gear_selector.tscn" id="14_xrgga"]
[ext_resource type="Texture2D" uid="uid://73gi871a4dr7" path="res://assets/asperite/inventory/inventory_slot/UI_NoteBook_Spritesheet_Select01a.png" id="16_v70co"]
[ext_resource type="Texture2D" uid="uid://cy05oajbiqdkn" path="res://assets/asperite/inventory/equipment_tab/gear_selector/item_description_background.png" id="17_00gvd"]
[ext_resource type="Texture2D" uid="uid://irvbdl0pat88" path="res://assets/asperite/inventory/sword_icon.png" id="17_ik22q"]
[ext_resource type="Script" uid="uid://bpyj8ugmi6t0t" path="res://scenes/inventory/inventory_view/item_description_box.gd" id="17_ycsy7"]
[ext_resource type="Texture2D" uid="uid://lap02cxlbnp1" path="res://assets/asperite/inventory/equipment_tab/line.png" id="18_ycsy7"]
[ext_resource type="PackedScene" uid="uid://bx475rcu42d08" path="res://scenes/inventory/inventory_view/equipment_tab/trash_slot/trash_slot.tscn" id="19_wdr80"]
[ext_resource type="Texture2D" uid="uid://3w4d3der8ula" path="res://assets/asperite/inventory/materials_tab/banner.png" id="20_qufb6"]
[ext_resource type="Script" uid="uid://budyxvcrbpvo1" path="res://scenes/inventory/inventory_view/materials_tab/materials_tab.gd" id="21_26fxh"]
[ext_resource type="Texture2D" uid="uid://x368xmilo0p" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/bar_scroll..png" id="21_xb6h7"]
[ext_resource type="Texture2D" uid="uid://cqbdw487scbtr" path="res://assets/asperite/inventory/equipment_tab/equipment_grid/bar_grabber.png" id="22_26fxh"]
[ext_resource type="PackedScene" uid="uid://c5wiepsq2qinv" path="res://scenes/inventory/inventory_view/materials_tab/material_container.tscn" id="22_qufb6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_61p00"]

[sub_resource type="Animation" id="Animation_a4bu5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_835ns"]
resource_name = "start_select"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_juskt"]
_data = {
&"RESET": SubResource("Animation_a4bu5"),
&"start_select": SubResource("Animation_835ns")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v70co"]
texture = ExtResource("21_xb6h7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ik22q"]
texture = ExtResource("22_26fxh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ycsy7"]
texture = ExtResource("22_26fxh")
axis_stretch_vertical = 1

[sub_resource type="Theme" id="Theme_00gvd"]
VScrollBar/styles/grabber = SubResource("StyleBoxTexture_ycsy7")

[node name="InventoryView" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_43eln")

[node name="BookBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -225.0
offset_right = 350.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_61p00")

[node name="TabSwitcher" type="Control" parent="BookBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_tabsw")

[node name="EquipmentTabButton" parent="BookBackground/TabSwitcher" instance=ExtResource("3_eyvfv")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 55.5
offset_top = 95.0
offset_right = 55.5
offset_bottom = 95.0

[node name="MaterialsTabButton" parent="BookBackground/TabSwitcher" instance=ExtResource("3_eyvfv")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 55.5
offset_top = 144.0
offset_right = 55.5
offset_bottom = 144.0
icon_texture = ExtResource("4_0y30f")

[node name="EquipmentTab" type="Control" parent="BookBackground"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_qfdbg")

[node name="EquipmentTabBanner" type="TextureRect" parent="BookBackground/EquipmentTab"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 305.0
offset_bottom = 129.0
texture = ExtResource("8_midoe")

[node name="Selection" type="Control" parent="BookBackground/EquipmentTab"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SelectionBanner" type="TextureRect" parent="BookBackground/EquipmentTab/Selection"]
layout_mode = 0
offset_left = 145.0
offset_top = 130.0
offset_right = 269.0
offset_bottom = 158.0
texture = ExtResource("9_qedsu")

[node name="RightArrow" type="TextureRect" parent="BookBackground/EquipmentTab/Selection"]
layout_mode = 0
offset_left = 272.5
offset_top = 138.0
offset_right = 286.5
offset_bottom = 151.0
texture = ExtResource("10_fs5oo")

[node name="LeftArrow" type="TextureRect" parent="BookBackground/EquipmentTab/Selection"]
layout_mode = 0
offset_left = 127.0
offset_top = 138.0
offset_right = 141.0
offset_bottom = 151.0
texture = ExtResource("10_fs5oo")
flip_h = true

[node name="SelectionDots" type="Control" parent="BookBackground/EquipmentTab/Selection"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="BookBackground/EquipmentTab/Selection/SelectionDots"]
layout_mode = 0
offset_left = 152.5
offset_top = 159.0
offset_right = 260.5
offset_bottom = 167.0

[node name="Option1" type="TextureRect" parent="BookBackground/EquipmentTab/Selection/SelectionDots/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("11_xrgga")
stretch_mode = 2

[node name="Option2" type="TextureRect" parent="BookBackground/EquipmentTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="Option3" type="TextureRect" parent="BookBackground/EquipmentTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="Option4" type="TextureRect" parent="BookBackground/EquipmentTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="Option5" type="TextureRect" parent="BookBackground/EquipmentTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="EquipmentGrid" parent="BookBackground/EquipmentTab" instance=ExtResource("13_qedsu")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 82.0
offset_top = 179.0
offset_right = 318.0
offset_bottom = 399.0

[node name="GearSelector" parent="BookBackground/EquipmentTab" instance=ExtResource("14_xrgga")]
unique_name_in_owner = true
layout_mode = 0

[node name="SelectorSprite" type="Node2D" parent="BookBackground/EquipmentTab"]
unique_name_in_owner = true
top_level = true
position = Vector2(27, 19)
metadata/_edit_group_ = true

[node name="SelectorSprite" type="Sprite2D" parent="BookBackground/EquipmentTab/SelectorSprite"]
scale = Vector2(2.2, 2.2)
texture = ExtResource("16_v70co")
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="BookBackground/EquipmentTab/SelectorSprite"]
unique_name_in_owner = true
root_node = NodePath("../SelectorSprite")
libraries = {
&"": SubResource("AnimationLibrary_juskt")
}

[node name="ItemDescriptionBox" type="TextureRect" parent="BookBackground/EquipmentTab"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 386.0
offset_top = 278.0
offset_right = 810.0
offset_bottom = 488.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_00gvd")
script = ExtResource("17_ycsy7")

[node name="ItemIcon" type="TextureRect" parent="BookBackground/EquipmentTab/ItemDescriptionBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 336.0
offset_top = 10.0
offset_right = 352.0
offset_bottom = 26.0
scale = Vector2(2.5, 2.5)
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("17_ik22q")

[node name="ScrollContainer" type="ScrollContainer" parent="BookBackground/EquipmentTab/ItemDescriptionBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="ItemName" type="Label" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "ItemName"

[node name="ItemType" type="Label" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.37791893, 0.37791884, 0.37791875, 1)
theme_override_font_sizes/font_size = 12
text = "[ItemType - SubitemType]"

[node name="TextureRect" type="TextureRect" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("18_ycsy7")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="RichTextLabel" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "[color=gray]Description...[/color]"

[node name="EffectsLabel" type="RichTextLabel" parent="BookBackground/EquipmentTab/ItemDescriptionBox/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[color=red]Effects[/color]"

[node name="TrashSlot" parent="BookBackground/EquipmentTab" instance=ExtResource("19_wdr80")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 400.0
offset_top = 243.5
offset_right = 429.0
offset_bottom = 271.5

[node name="MaterialsTab" type="Control" parent="BookBackground"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("21_26fxh")

[node name="MaterialsTabBanner" type="TextureRect" parent="BookBackground/MaterialsTab"]
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 305.0
offset_bottom = 129.0
texture = ExtResource("20_qufb6")

[node name="Selection" type="Control" parent="BookBackground/MaterialsTab"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SelectionBanner" type="TextureRect" parent="BookBackground/MaterialsTab/Selection"]
layout_mode = 0
offset_left = 145.0
offset_top = 130.0
offset_right = 269.0
offset_bottom = 158.0
texture = ExtResource("9_qedsu")

[node name="RightArrow" type="TextureRect" parent="BookBackground/MaterialsTab/Selection"]
layout_mode = 0
offset_left = 272.5
offset_top = 138.0
offset_right = 286.5
offset_bottom = 151.0
texture = ExtResource("10_fs5oo")

[node name="LeftArrow" type="TextureRect" parent="BookBackground/MaterialsTab/Selection"]
layout_mode = 0
offset_left = 127.0
offset_top = 138.0
offset_right = 141.0
offset_bottom = 151.0
texture = ExtResource("10_fs5oo")
flip_h = true

[node name="SelectionDots" type="Control" parent="BookBackground/MaterialsTab/Selection"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="BookBackground/MaterialsTab/Selection/SelectionDots"]
layout_mode = 0
offset_left = 152.5
offset_top = 159.0
offset_right = 260.5
offset_bottom = 167.0

[node name="Option1" type="TextureRect" parent="BookBackground/MaterialsTab/Selection/SelectionDots/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("11_xrgga")
stretch_mode = 2

[node name="Option2" type="TextureRect" parent="BookBackground/MaterialsTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="Option3" type="TextureRect" parent="BookBackground/MaterialsTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="Option4" type="TextureRect" parent="BookBackground/MaterialsTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="Option5" type="TextureRect" parent="BookBackground/MaterialsTab/Selection/SelectionDots/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("12_qfdbg")
stretch_mode = 2

[node name="MaterialsGrid" type="MarginContainer" parent="BookBackground/MaterialsTab"]
layout_mode = 0
offset_left = 82.5
offset_top = 183.5
offset_right = 310.5
offset_bottom = 371.5

[node name="MarginContainer" type="MarginContainer" parent="BookBackground/MaterialsTab/MaterialsGrid"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VScrollBar" type="VScrollBar" parent="BookBackground/MaterialsTab/MaterialsGrid/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/scroll = SubResource("StyleBoxTexture_v70co")
theme_override_styles/grabber = SubResource("StyleBoxTexture_ik22q")

[node name="Grabber" type="TextureRect" parent="BookBackground/MaterialsTab/MaterialsGrid/MarginContainer/VScrollBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -3.0
offset_top = 3.0
offset_right = 11.0
offset_bottom = 18.0
mouse_filter = 0
texture = ExtResource("22_26fxh")

[node name="ScrollContainer" type="ScrollContainer" parent="BookBackground/MaterialsTab/MaterialsGrid"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_00gvd")
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MaterialsVbox" type="VBoxContainer" parent="BookBackground/MaterialsTab/MaterialsGrid/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MaterialContainer" parent="BookBackground/MaterialsTab/MaterialsGrid/ScrollContainer/MaterialsVbox" instance=ExtResource("22_qufb6")]
layout_mode = 2
